Working on Users Routes and API Documentation
